--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
 	"author": "The WordPress Contributors",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
+	"prettier": "@wordpress/prettier-config",
+	"stylelint": {
+		"extends": "@wordpress/stylelint-config/scss"
+	},
 	"scripts": {
 		"build": "wp-scripts build",
-		"format": "wp-scripts format",
+		"format": "wp-scripts format && stylelint \"**/*.scss\"",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
 		"packages-update": "wp-scripts packages-update",
@@ -15,6 +19,10 @@
 		"start": "wp-scripts start"
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^30.10.0"
+		"@wordpress/eslint-plugin": "^22.3.0",
+		"@wordpress/prettier-config": "^4.17.0",
+		"@wordpress/scripts": "^30.10.0",
+		"@wordpress/stylelint-config": "^23.9.0",
+		"eslint-config-prettier": "^10.0.1"
 	}
 }
