--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
 		"lint:js": "wp-scripts lint-js",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "wp-scripts start"
+		"start": "wp-scripts start",
+		"prepare": "husky"
 	},
 	"devDependencies": {
 		"@wordpress/eslint-plugin": "^22.3.0",
 		"@wordpress/prettier-config": "^4.17.0",
 		"@wordpress/scripts": "^30.10.0",
 		"@wordpress/stylelint-config": "^23.9.0",
-		"eslint-config-prettier": "^10.0.1"
+		"eslint-config-prettier": "^10.0.1",
+		"husky": "^9.1.7"
 	}
 }
