--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
 	"stylelint": {
 		"extends": "@wordpress/stylelint-config/scss"
 	},
+	"lint-staged": {
+		"*.scss": "wp-scripts lint-style",
+		"*.js": "wp-scripts lint-js"
+	},
 	"scripts": {
 		"build": "wp-scripts build",
 		"format": "wp-scripts format && stylelint \"**/*.scss\"",
@@ -25,6 +29,7 @@
 		"@wordpress/scripts": "^30.10.0",
 		"@wordpress/stylelint-config": "^23.9.0",
 		"eslint-config-prettier": "^10.0.1",
-		"husky": "^9.1.7"
+		"husky": "^9.1.7",
+		"lint-staged": "^15.4.3"
 	}
 }
